[gd_scene load_steps=19 format=3 uid="uid://b350tl00c4f2w"]

[ext_resource type="Script" path="res://scripts/adventurers/knight.gd" id="1_s5a57"]
[ext_resource type="Texture2D" uid="uid://bmq31kr3rj2o6" path="res://assets/knight_sheet.png" id="2_202u1"]
[ext_resource type="Script" path="res://scripts/entity/entity_facing.gd" id="3_uugi8"]
[ext_resource type="Script" path="res://scripts/entity/hurtbox.gd" id="4_awk1o"]
[ext_resource type="Script" path="res://scripts/entity/senses.gd" id="4_graoc"]
[ext_resource type="PackedScene" uid="uid://d26dsf0bldvuh" path="res://scenes/behavior_trees/skeleton_behavior.tscn" id="5_8ti6n"]
[ext_resource type="Script" path="res://scripts/entity/hitbox.gd" id="5_wuy1k"]

[sub_resource type="Animation" id="Animation_kl8h4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uh3k2"]
resource_name = "attack"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.333333, 0.533333, 0.6, 0.633333, 0.7, 0.866667, 1.03333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.7, 0.933333),
"transitions": PackedFloat32Array(1, 1.41421, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nj4b8"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ugt8b"]
resource_name = "walking"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.733333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fm68b"]
_data = {
"RESET": SubResource("Animation_kl8h4"),
"attack": SubResource("Animation_uh3k2"),
"idle": SubResource("Animation_nj4b8"),
"walking": SubResource("Animation_ugt8b")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsmnu"]
radius = 22.8572
height = 64.6428

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crcio"]
size = Vector2(99.8215, 224.107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngtng"]
size = Vector2(262.589, 262.858)

[sub_resource type="CircleShape2D" id="CircleShape2D_qkfe3"]
radius = 110.761

[sub_resource type="CircleShape2D" id="CircleShape2D_ajwg1"]
radius = 1000.01

[sub_resource type="LabelSettings" id="LabelSettings_s1msu"]
font_size = 30
font_color = Color(1, 0, 0, 1)

[node name="Knight" type="CharacterBody2D"]
scale = Vector2(0.35, 0.35)
script = ExtResource("1_s5a57")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(70, -125)
texture = ExtResource("2_202u1")
hframes = 5
vframes = 4
script = ExtResource("3_uugi8")
unflipped_position = Vector2(70, -125)
flipped_position = Vector2(-70, -125)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fm68b")
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.85714, -28.5714)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("CapsuleShape2D_hsmnu")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2(-20, 0)
script = ExtResource("4_awk1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2(18.6606, -110.804)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_crcio")

[node name="HitBox" type="Area2D" parent="."]
visible = false
script = ExtResource("5_wuy1k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2(150, -120)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_ngtng")
script = ExtResource("3_uugi8")
unflipped_position = Vector2(150, -120)
flipped_position = Vector2(-130, -120)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="calcTimer" type="Timer" parent="."]
autostart = true

[node name="spacer_radius" type="Area2D" parent="."]
visible = false
position = Vector2(0, -49)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="spacer_radius"]
position = Vector2(15, 11.5)
shape = SubResource("CircleShape2D_qkfe3")

[node name="Spacer" type="Node2D" parent="."]
visible = false
position = Vector2(73, 47)

[node name="Senses" type="Area2D" parent="."]
visible = false
position = Vector2(0, -47)
script = ExtResource("4_graoc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senses"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ajwg1")

[node name="Cooldown" type="Timer" parent="."]

[node name="SkeletonBehavior" parent="." node_paths=PackedStringArray("blackboard", "actor") instance=ExtResource("5_8ti6n")]
blackboard = NodePath("@Node@162063")
actor = NodePath("..")

[node name="DamageTaken" type="Label" parent="."]
offset_left = -42.8571
offset_top = -311.429
offset_right = 8.14286
offset_bottom = -269.429
text = "999"
label_settings = SubResource("LabelSettings_s1msu")

[connection signal="CharacterDirectionChange" from="." to="Sprite2D" method="_on_knight_character_direction_change"]
[connection signal="CharacterDirectionChange" from="." to="HitBox/CollisionShape2D" method="_on_knight_character_direction_change"]
[connection signal="area_entered" from="Senses" to="Senses" method="_on_area_entered"]
[connection signal="area_exited" from="Senses" to="Senses" method="_on_area_exited"]
[connection signal="body_entered" from="Senses" to="Senses" method="_on_body_entered"]
[connection signal="body_exited" from="Senses" to="Senses" method="_on_body_exited"]
